# softkinetic_interactive_Gesture_Camera

softkinetic_camera/: CMakeLists.txt  package.xml
softkinetic_camera/include/softkinetic_camera/: main.h  plane_seg.h
softkinetic_camera/launch/: softkinetic.rviz  softkinetic_camera_demo.launch
softkinetic_camera/src/: TestProtocol.txt  euclidean_cluster_node.cpp  formulation.txt  outliers_display.cpp  plane_seg.cpp  ransac_seg.cpp  reconstruction_triangulation.cpp
